--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,18 @@
   "prefer-stable": true,
   "repositories": [
     {
+      "type": "vcs",
+      "url": "https://github.com/mikeyp/drupal-scaffold"
+    },
+    {
       "type": "composer",
       "url": "https://packages.drupal.org/8"
+
     }
   ],
   "require": {
     "composer/installers": "^1.0.20",
-    "drupal-composer/drupal-scaffold": "^1.3.1",
+    "drupal-composer/drupal-scaffold": "dev-master",
     "cweagans/composer-patches": "~1.0",
     "drupal/core": "8.1.1",
     "drush/drush": "8.1.2",
