--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "cweagans/composer-patches": "~1.0",
     "drupal/core": "8.1.1",
     "drush/drush": "8.1.2",
-    "drupal/console": "^1.0.0-alpha2"
+    "drupal/console": "^1.0.0-alpha2",
+    "vlucas/phpdotenv": "^2.3"
   },
   "require-dev": {
     "behat/mink": "~1.6",
