--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "drupal/console": "^1.0.0-alpha2",
     "vlucas/phpdotenv": "^2.3",
     "drupal/flysystem": "1.0.0-alpha3",
-    "drupal/flysystem_s3": "1.x-dev"
+    "drupal/flysystem_s3": "1.x-dev",
+    "drupal/console_logger": "1.x-dev"
   },
   "require-dev": {
     "behat/mink": "~1.6",
@@ -29,7 +30,8 @@
     "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
     "mikey179/vfsStream": "~1.2",
     "phpunit/phpunit": "~4.8",
-    "symfony/css-selector": "2.7.*"
+    "symfony/css-selector": "2.7.*",
+    "heroku/heroku-buildpack-php": "*"
   },
   "conflict": {
     "drupal/drupal": "*"
