--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 DATABASE_URL="mysql://username:password@localhost:3306/database-name"
 DRUPAL_ENV="development"
+S3_KEY="key"
+S3_SECRET="secret-key"
+S3_REGION="us-east-1"
+S3_BUCKET="bucket-name"
