--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
     "drupal/flysystem": "1.0.0-alpha3",
     "drupal/flysystem_s3": "1.x-dev",
     "drupal/console_logger": "1.x-dev",
-    "ext-gd": "*"
+    "ext-gd": "*",
+    "ext-apcu": "*",
+    "gd": "*"
   },
   "require-dev": {
     "behat/mink": "~1.6",
