--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     "composer/installers": "^1.0.20",
     "drupal-composer/drupal-scaffold": "dev-master",
     "cweagans/composer-patches": "~1.0",
-    "drupal/core": "8.1.6",
-    "drush/drush": "8.1.2",
-    "drupal/console": "^1.0.0-alpha2",
+    "drupal/core": "~8.1.6",
+    "drush/drush": "~8.1.2",
+    "drupal/console": "~1.0.0-alpha2",
     "vlucas/phpdotenv": "^2.3",
-    "drupal/flysystem": "1.0.0-alpha3",
-    "drupal/flysystem_s3": "1.x-dev",
+    "drupal/flysystem": "~1.0.0-alpha3",
+    "drupal/flysystem_s3": "~1.0.0-alpha2",
     "drupal/console_logger": "1.x-dev"
   },
   "require-dev": {
