Updating scaffolding base

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-DATABASE_URL="mysql://username:password@localhost:3306/database-name"
-DRUPAL_ENV="development"
-DRUPAL_HASH_SALT=""
-S3_KEY="key"
-S3_SECRET="secret-key"
-S3_REGION="us-east-1"
-S3_BUCKET="bucket-name"
+DATABASE_URL=mysql://username:password@localhost:3306/database-name
+DRUPAL_ENV=development
+DRUPAL_SETTINGS_HASH_SALT=
+DRUPAL_SETTINGS_REVERSE_PROXY=TRUE
+DRUPAL_SETTINGS_REVERSE_PROXY_ADDRESSES=["127.0.0.1"]
+S3_KEY=key
+S3_SECRET=secret-key
+S3_REGION=us-east-2
+S3_BUCKET=bucket-name
+S3_CNAME=bucket-name.s3.amazonaws.com
+S3_ENDPOINT=https://s3.us-east-2.amazonaws.com
